# mcp-macos-lima

./: .gitignore  .mcp.json  INSTALL_MCP.md  MCP_Client_Test_Instructions.md  PRD.md  README.md  generate_mac_config_snippet.sh  pyproject.toml  reset_claude_config.sh
src/mcp_lima/: __init__.py  cli_wrapper.py  models.py  server.py
src/mcp_lima.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_lima/tools/: __init__.py  access.py  instances.py  lifecycle.py
test_reports/mcp_lima/claude_code/: mcp-client-results-2026-03-24.md
test_reports/mcp_lima/codex/: mcp-client-results-2026-03-24.md
test_reports/mcp_lima/copilot/: mcp-client-results-2026-03-23.md  mcp-client-results-2026-03-24.md
tests/: conftest.py
tests/integration/: test_smoke_integration.py
tests/unit/: test_cli_wrapper.py  test_server.py  test_tools.py
